[package]
name = "fzvk-shader"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
litrs = { version = "0.4.1", default-features = false }
quote = "1.0.40"
rspirv = "0.12.0"
rustc-hash = "2.1.1"
shaderc = "0.9.1"
proc-macro2 = "1.0.95"
convert_case = "0.10.0"
proc-macro-error = "1.0.4"
